fix(portal): align menu to the right side of the Header

--- a/src/styles/blocks/nav.css
+++ b/src/styles/blocks/nav.css
@@ -1,6 +1,7 @@
 .nav {
   vertical-align: top;
   line-height: 40px;
+  float: right;
 
   @media (max-width: 860px) {
     position: fixed;
